extends Node2D

func _ready():
	pass # Replace with function body.
	
func _on_Button_pressed():
	get_tree().change_scene("res://jogando.tscn")
func _on_Button2_pressed():
	get_tree().change_scene("res://jogando.tscn")
func _on_Button3_pressed():
	get_tree().change_scene("res://jogando.tscn")
func _on_Button4_pressed():
	get_tree().change_scene("res://jogando.tscn")
